--- a/rover/partials/reservationCard/rvReservationDepositPopup.html
+++ b/rover/partials/reservationCard/rvReservationDepositPopup.html
@@ -41,6 +41,8 @@
                         </span>
                     </li>
                 </ul>
+
+                <button type="button" class="button blank modal-close" ng-click="closeDialog()">Close</button>
             </div>
             <!-- button actions -->
             <div class="actions" ng-show="errorOccured">
