--- a/rover/partials/accounts/search/rvAccountsSearch.html
+++ b/rover/partials/accounts/search/rvAccountsSearch.html
@@ -1,5 +1,5 @@
 <!-- Search form -->
-<form method="get" action="" name="accounts-search-form" id="accounts-search-form" class="search-form has-options single-option enable-adding" role="search" ng-class="{'enable-adding':shouldShowAddNewButton()}">
+<form method="get" action="" name="accounts-search-form" id="accounts-search-form" class="search-form has-options three-options" role="search" ng-class="{'enable-adding':shouldShowAddNewButton()}">
     
     <div class="entry search">
         <button id="accounts-clear-query" class="clear-query" 
@@ -21,7 +21,16 @@
                 function-to-fire="searchQueryChanged"/>
     </div>
     <div class="entry options">
-        <div class="select">
+        <div class="select with-label">
+            <label for="account-type">Account Type</label>
+            <select id="account-type" ng-model="accountType" ng-change= "search()">
+                <option value="" selected="" translate>ALL_ACCOUNT_TYPE</option>
+                <option value="GROUP" translate>GROUP</option>
+                <option value="HOUSE" translate>HOUSE</option>
+            </select>
+        </div>
+        <div class="select with-label">
+            <label for="account-status">Account Status</label>
             <select id="account-status" ng-model="status" 
                 ng-change= "search()"
                 ng-class="{'placeholder': status == ''}"> <!-- Add class="placeholder" if val="" is selected -->
@@ -30,6 +39,14 @@
                 <option value="CLOSED" translate>ACCOUNTS_CLOSED</option>
             </select>
         </div>
+        <!-- Remove .checked if not checked -->
+        <label class="checkbox inline" ng-class="{'checked':isNonZero}">
+            <!-- Remove .checked if not checked -->
+            <span class="icon-form icon-checkbox" ng-class="{'checked':isNonZero}"></span>
+            <!-- Remove checked="checked" if not checked -->
+            <input type="checkbox" checked="checked" value="{value}" ng-model="isNonZero" ng-change= "search()">
+            Non-Zero Balance
+        </label>
     </div>
     <a ng-click="gotoAddNewAccount()" class="add-new-button" ng-show="shouldShowAddNewButton()" translate>ACCOUNTS_ADD_NEW</a>
 </form>
