CICO-33549 Daily Production by Rate label changes added

--- a/rover/partials/reports/shared/summaryCounts.html
+++ b/rover/partials/reports/shared/summaryCounts.html
@@ -136,9 +136,9 @@
 
 <!-- Daily production report -->
 <ul ng-if="isThisReport(['DAILY_PRODUCTION_ROOM_TYPE', 'DAILY_PRODUCTION_RATE'])" class="totals">
-    <li>Rate Revenue<span>{{ summaryCounts.rate_revenue | currency:currencySymbol:2 }}</span></li>
+    <li>Total Revenue<span>{{ summaryCounts.rate_revenue | currency:currencySymbol:2 }}</span></li>
     <li>ADR<span>{{ summaryCounts.adr | currency:currencySymbol:2 }}</span></li>
-    <li>Actual Revenue<span>{{ summaryCounts.actual_revenue | currency:currencySymbol:2 }}</span></li>
+    <li>Room Revenue<span>{{ summaryCounts.actual_revenue | currency:currencySymbol:2 }}</span></li>
 </ul>
 
 <!-- Daily production by demographics -->
