CICO-32635 : Add missed class on html.

--- a/rover/partials/accounts/search/rvAccountsSearch.html
+++ b/rover/partials/accounts/search/rvAccountsSearch.html
@@ -29,7 +29,7 @@
                 <option value="HOUSE" translate>HOUSE</option>
             </select>
         </div>
-        <div class="select with-label">
+        <div class="select larger-select with-label">
             <label for="account-status">Account Status</label>
             <select id="account-status" ng-model="status" 
                 ng-change= "search()"
