--- a/rover/partials/search/rvSearchReservationsWidget.html
+++ b/rover/partials/search/rvSearchReservationsWidget.html
@@ -101,6 +101,7 @@
                                 >
                                 	Queued
                                 	<span class="time">{time | exp: 1h or 20m }</span>
+                                	<span class="time" pretty-time-span="row.is_queued_till"></span>
                                 </span>
                             </div>
 
