--- a/rover/partials/workManagement/rvWorkManagementSingleSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementSingleSheet.html
@@ -71,7 +71,7 @@
                         {{room.room_no}}
                         <span ng-show="NOT_NOW" class="icons icon-queued has-time">
                             Queued
-                            <span class="time">{time | exp. 1h or 20m}</span>
+                            <span class="time" pretty-time-span="row.is_queued_till"></span>
                         </span>
                     </h3>
                     <div class="reservation-status">
