CICO-34068 Saferpay to default to six payments in rover CICO-34091 Cards not selectable from existing list in iPad app
API Fix for Server error if expired credit cards are provided in save payment API (MLI)

--- a/payment/partials/payCreditCardOptions.html
+++ b/payment/partials/payCreditCardOptions.html
@@ -15,7 +15,9 @@
 </ul>
 
 <!-- Existing cards - use only when they exist -->
-<div id="cc-exsiting-card" class="cards-list cards-container scrollable" ng-show="payment.addCCMode === 'EXISTING_CARDS'" ng-iscroll="cardsList">
+<div id="cc-exsiting-card" class="cards-list cards-container scrollable" ng-show="payment.addCCMode === 'EXISTING_CARDS'"
+     ng-iscroll="cardsList"
+     ng-iscroll-delay='100'>
     <div class="wrapper">
         <label class="active-item item-payment" ng-click="setCreditCardFromList(card.value)" ng-repeat="card in payment.linkedCreditCards" ng-show="card.is_credit_card">
             <!-- Add class "primary" when selected -->
