--- a/rover/partials/reports/occupancyRevenueReport/rvOccupancyRevenueReport.html
+++ b/rover/partials/reports/occupancyRevenueReport/rvOccupancyRevenueReport.html
@@ -18,10 +18,11 @@
                                     <li class="main-heading" ng-class="{'double-row':chosenLastYear || chosenVariance}">{{currentHotelData.name}} </li>
                                     <!-- Add class "double-row" if showing variance or last year -->
                                     <li>Available Rooms</li>
+                                    <li>Out of Order Rooms</li>
                                     <li>Occupied Rooms</li>
                                     <li>Complimentary Rooms</li>
                                     <li>Occupied Rooms (Excl. Comp.)</li>
-
+                                    <li ng-show="marketExists"><strong>Occupied Rooms by Market</strong></li>
                                     <li ng-repeat="market in markets.data" ng-show="market.selected">
                                         <em>{{ market.name }}</em>
                                     </li>
@@ -40,7 +41,7 @@
                                     <li>RevPar</li>
                                     <li>ADR (Incl. Comp.)</li>
                                     <li>ADR (Excl. Comp.)</li>
-
+                                    <li ng-show="marketExists"><strong>Room Revenue by Market</strong></li>
                                     <li ng-repeat="market in markets.data" ng-show="market.selected">
                                         <em>{{ market.name }}</em>
                                     </li>
@@ -49,7 +50,7 @@
                                     </li>
                                     <!-- .. repeat for all markets -->
 
-
+                                    <li><strong>Charge Groups</strong></li>
                                     <li ng-repeat="chargeGroup in results.charge_groups"><em>{{chargeGroup.name}}</em>
                                     </li>
                                     <!-- ... repeat for all charge group titles -->
@@ -81,7 +82,9 @@
                                                             {{absoulte(getValue(occupancy.key,$index))}}
                                                     </td>
                                             </tr>
-
+                                            <tr ng-show="marketExists">
+                                                <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
+                                            </tr>
                                             <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index" ng-class="{'negative' : getMarketOccupancyValue(outerIndex,$index) < 0}">
                                                     <td ng-repeat="n in getNumber() track by $index" ng-class="getClass($index)">
                                                             {{absoulte(getMarketOccupancyValue(outerIndex,$index)) | number:0}}
@@ -104,7 +107,9 @@
                                                             {{ absoulte(getValue(revenue.key,$index)) | currency:currencySymbol:2 }}
                                                     </td>
                                             </tr>
-
+                                            <tr ng-show="marketExists">
+                                                <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
+                                            </tr>
                                             <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index" ng-class="{'negative' : getMarketRevenueValue(outerIndex,$index) < 0}">
                                                     <td ng-repeat="n in getNumber() track by $index" ng-class="getClass($index)">
                                                             {{ absoulte(getMarketRevenueValue(outerIndex,$index)) | currency:currencySymbol:2 }}
@@ -115,7 +120,9 @@
                                                     {{ absoulte(getMarketRevenueValue(outerIndex, $index)) | currency:currencySymbol:2 }}
                                                 </td>
                                             </tr>
-
+                                            <tr>
+                                                <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
+                                            </tr>
                                             <tr ng-repeat="chargeGroup in results.charge_groups" ng-init="outerIndex = $index">
                                                     <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getChargeCodeValue(outerIndex,$index) < 0}">
                                                             {{absoulte(getChargeCodeValue(outerIndex,$index)) | currency:currencySymbol:2 }}
