--- a/guestweb/common_css/nativ/theme.less
+++ b/guestweb/common_css/nativ/theme.less
@@ -166,10 +166,10 @@ textarea.sub-text, textarea.sub-text:hover{
 .calendar-done{
    background-image: url('/assets/guestweb/common_images/black/done_black.png');
 }
-.back-to-checkout {
-    background: url(/assets/guestweb/common_images/black/left_arrow .png) center top no-repeat;
-    height: 36px;
-}
+ .back-to-checkout {
+    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
+    background-size: 20px;
+    }
 .pickadate-prev,.pickadate-next,.pickadate-prev:hover,.pickadate-next:hover{
   color:#877642 !important;
 }
