--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -436,12 +436,24 @@
 
 @media (min-height: 800px) {
     #options li .option {
-        width: 250px !important;
-        height: 250px !important;
+        width: 100% !important;
+        height: 35% !important;
     }
     #options.large-icons li .option {
-        width: 325px !important;
-        height: 325px !important;
+        width: 90% !important;
+        height: 40% !important;
+    }
+}
+
+
+@media (min-height: 1240px) {
+    #options li .option {
+        width: 100% !important;
+        height: 35% !important;
+    }
+    #options.large-icons li .option {
+        width: 90% !important;
+        height: 25% !important;
     }
 }
 
