CICO-33096 CICO-33095 Added styles in calender

--- a/guestweb/common_css/west_wing/theme.less
+++ b/guestweb/common_css/west_wing/theme.less
@@ -167,7 +167,7 @@ textarea.sub-text, textarea.sub-text:hover{
    background-image: url('/assets/guestweb/common_images/black/done_black.png');
 }
 .back-to-checkout {
-    background: url(/assets/guestweb/common_images/black/left_arrow .png) center top no-repeat;
+    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
     height: 36px;
 }
 .pickadate-prev,.pickadate-next,.pickadate-prev:hover,.pickadate-next:hover{
@@ -191,8 +191,8 @@ textarea.sub-text, textarea.sub-text:hover{
 .departure-date{
   color:#000;
 }
-.date-text{
-  color:#fff;
+.date-text {
+    color: #000;
 }
 .res-details-heading,.res-details-heading:hover{
     font-size:18px !important;
