--- a/rover/partials/reservation/rvSummaryAndConfirm.html
+++ b/rover/partials/reservation/rvSummaryAndConfirm.html
@@ -231,7 +231,7 @@
                             selected-c-c="renderData"
                             amount='reservationData.depositAmount'
                             action-type="DEPOSIT_PAYMENT_RES_SUMMARY"
-                            is-editable='isDepositEditable'
+                            is-editable='reservationData.depositEditable'
                             is-rate-suppressed='isReservationRateSuppressed'
                             has-permission='hasPermissionToMakePayment()'
                             form-template-url='/assets/partials/payment/rvReservationSummaryDepositPartial.html'
