--- a/payment/partials/sntPaymentHome.html
+++ b/payment/partials/sntPaymentHome.html
@@ -3,7 +3,7 @@
 <div id="payment-type" class="entry full-width" ng-show="payment.screenMode === 'PAYMENT_MODE'">
     <label for="payment-type" translate>PAYMENT_TYPE</label>
     <div class="select">
-        <select ng-options="paymentData.name as paymentData.description for paymentData in paymentTypes" ng-model="selectedPaymentType" ng-change="onPaymentInfoChange()">
+        <select ng-options="paymentData.name as paymentData.description for paymentData in paymentTypes" ng-model="selectedPaymentType" ng-change="onPaymentInfoChange(true)">
             <option value="" translate>SELECT_PAYMENT_TYPE</option>
         </select>
     </div>
