CICO-28303 CICO-28300 Changed input feild color

--- a/guestweb/common_css/beverly_hills/theme.less
+++ b/guestweb/common_css/beverly_hills/theme.less
@@ -218,3 +218,6 @@ textarea.sub-text, textarea.sub-text:hover{
 .res-details-heading,.res-details-heading:hover{
   color:#797979;
 }
+.input-field {
+    background-color: white;
+}
