--- a/admin/partials/paymentMethods/adEditPaymentMethod.html
+++ b/admin/partials/paymentMethods/adEditPaymentMethod.html
@@ -6,6 +6,7 @@
 
 		<fieldset class='holder left'>
 			<ad-checkbox is-checked="editData.is_cc" label="{{ 'CC' | translate}}" div-class="full-width" is-disabled="editData.is_system_defined"></ad-checkbox>
+
 			<div ng-hide="!editData.is_cc">
 				<ad-checkbox is-disabled="editData.value == 'CC'" is-checked="editData.is_offline" label="{{ 'OFFLINE' | translate}}" div-class="full-width"></ad-checkbox>
 			</div>
@@ -31,7 +32,14 @@
 			<ad-checkbox is-disabled="editData.value == 'CC'" is-checked="editData.is_web_only" label="{{ 'WEB_ONLY' | translate}}" div-class="full-width" change="webOnlyChanged()"></ad-checkbox>
 
 			<ad-checkbox is-disabled="editData.value == 'CC'" is-checked="editData.is_display_reference" label="{{ 'DISPLAY_REFERENCE' | translate}}" div-class="full-width"></ad-checkbox>
-			<ad-checkbox is-checked="editData.allow_post_with_no_credit" label="{{ 'ALLOW_POST_WITH_NO_CREDIT' | translate}}" div-class="full-width"></ad-checkbox>
+
+			<div class="entry radio-check " ng-hide="editData.value == 'CC' && !isEditCC">
+                <label class="checkbox">
+                    <span class="icon-form icon-checkbox" ng-class="{'checked': editData.allow_post_with_no_credit}"></span>
+                    {{ 'ALLOW_POST_WITH_NO_CREDIT' | translate }}
+                    <input ng-model = "editData.allow_post_with_no_credit" type="checkbox">
+                </label>
+            </div>
 		</fieldset>
 		<div class='actions float'>
 			<button class='button blank edit-data-inline' id='cancel' type='button' ng-click="clickCancel()" translate>
