CICO-30827: Allow post with no credit - with and without permission

--- a/rover/css/reservation.less
+++ b/rover/css/reservation.less
@@ -35,13 +35,13 @@
 
     .reservation-content.rooms-and-rates-content {
       .iScrollVerticalScrollbar, .iScrollHorizontalScrollbar{
-        .iScrollIndicator {        
+        .iScrollIndicator {
           background: #ffb319 !important;
           -webkit-border-radius: 4px;
           -moz-border-radius: 4px;
           border-radius: 4px;
         }
-      } 
+      }
       .rate-details .info{
         ul{
           li{
@@ -53,7 +53,7 @@
     .summary_email{
       width: 93%;
     }
-    
+
 
     @creditCard:    asset-url("cc-icons.png");
     @creditCard2x:  asset-url("cc-icons@2x.png");
@@ -89,7 +89,7 @@
   span.no-right-margin {
     margin-right: 0px;
   }
-  
+
   .icons.time.check-in{
     background-position: 10px -553px;
     height: 30px;
@@ -127,7 +127,7 @@
 
 #demographics{
   width: 300px;
-  min-height: 425px;  
+  min-height: 425px;
   .modal-header{
     text-align: center;
     padding: 10px 20px;
@@ -146,9 +146,9 @@
       &.disabled-calendar{
         background: #fcfcfc;
         cursor: default
-      }    
-    }    
-  }    
+      }
+    }
+  }
 }
 
 
@@ -207,7 +207,7 @@
     height: 30px;
   }
   .sharer-avater{
-      width: 60px; 
+      width: 60px;
       margin-right: 5px;
       padding: 10px;
   }
@@ -224,7 +224,7 @@
 
   .assign-reassign{
    > button{
-    width: 190px !important;  
+    width: 190px !important;
     display: table;
     margin: 0 auto;
    }
@@ -233,11 +233,11 @@
       font-size:small;
   }
   .action-post-btn{//fixes an opacity transition bug in chrome
-      -webkit-transform: translateZ(0); 
+      -webkit-transform: translateZ(0);
   }
   @media and (min-height:768px){
     .action-post-btn{//fixes an opacity transition bug in chrome
-        -webkit-transform: translateZ(0); 
+        -webkit-transform: translateZ(0);
     }
   }
 
@@ -263,4 +263,7 @@
 }
 .special-request-icon{
       background-image: asset-url("bell_special_new.svg") !important;
+}
+.big-message {
+  width: 500px !important;
 }
