--- a/rover/partials/postCharge/rvPostChargeV2.html
+++ b/rover/partials/postCharge/rvPostChargeV2.html
@@ -25,6 +25,15 @@
 				</div>
 			</div>
 
+			<div id="not-checked-in" ng-show="selectedReservationPostNotAllowed" class="inner-overlay" ng-class="{'visible': selectedReservationPostNotAllowed == true}">
+				<div class="inner-content big-message">
+					<span class="message h2" translate>{{'POSTINGS_WITHOUT_CREDIT_NOT_PERMITTED_FOR_THIS_RESERVATION' | translate}}</span>
+					<button type="button" ng-show="!hasPermissionToAllowPostWithNoCredit()" class="button red" ng-click="clickedPostCharge($event)" translate>OK</button>
+					<button ng-show="hasPermissionToAllowPostWithNoCredit()" type="button" class="button green" ng-click="proceedWithPostCharge($event)" translate>PROCEED WITH POST CHARGES</button>
+					<button ng-show="hasPermissionToAllowPostWithNoCredit()" type="button" class="button blank" ng-click="clickedPostChargeCancel()" translate>CANCEL</button>
+				</div>
+			</div>
+
 			<div ng-show="chargePosted" id="charge-posted" class="inner-overlay" ng-class="{'visible': chargePosted == true}">
 				<div class="inner-content">
 					<span class="message h2" translate>CHARGE_POSTED</span>
@@ -116,7 +125,7 @@
 				        	<div id="search-guests-for-charge-content" class="search-cards reservation-list scrollable" ng-iscroll="result_showing_area_post_charg" ng-iscroll-delay="1000" ng-show="!showInitialSearchScreen" ng-hide="showInitialSearchScreen || showNoMatches">
 				                <div class="wrapper">
 				                    <ul id="search-guests-for-charge-results" class="search-results">
-				                    	<li class="reservation post-charge" ng-click="clickedReservationToPostCharge(row.id)" ng-show="row.shouldShowReservation" ng-repeat="row in reservationsArray">
+				                    	<li class="reservation post-charge" ng-click="clickedReservationToPostCharge(row)" ng-show="row.shouldShowReservation" ng-repeat="row in reservationsArray">
 				                    		<a ng-class="getReservationClass(row.reservation_status)" ng-click="selectReservation(row)">
 
 				                    			<figure class="guest-image" ng-class="{'accompany': row.images.length >1}">
@@ -332,7 +341,7 @@
 					</div>
 					<div class="actions float">
 
-						<button ng-if="!isOutsidePostCharge" type="button" id="post" class="button modal-close" ng-disabled="disablePostChargeButton || shouldDisablePostCharge()" ng-click="postChargesToReservation()" ng-class="{'green': !shouldDisablePostCharge(), 'grey': disablePostChargeButton || shouldDisablePostCharge()}" translate>POST_CHARGE</button>
+						<button ng-if="!isOutsidePostCharge" type="button" id="post" class="button modal-close" ng-disabled="disablePostChargeButton || shouldDisablePostCharge()" ng-click="postCharges()" ng-class="{'green': !shouldDisablePostCharge(), 'grey': disablePostChargeButton || shouldDisablePostCharge()}" translate>POST_CHARGE</button>
 
 						<button ng-disabled="disableOutsidePostChargeButton" ng-if="isOutsidePostCharge" type="button" id="post" class="button green modal-close" ng-click="clickedPostCharges($event)" ng-class="{'grey': !isCardAttched}" translate>POST_CHARGE</button>
 
