CICO-34084 Hide all popups with waiting for C&P EMV transaction

--- a/rover/partials/accounts/transactions/rvAccountPaymentModal.html
+++ b/rover/partials/accounts/transactions/rvAccountPaymentModal.html
@@ -1,6 +1,6 @@
 <div role="dialog" id="modal" class="modal-show"
      ng-class="{'modal-show': !modalClosing}" ng-click="clearErrorMessage()" ng-cloak>
-    <form ng-show="!showArSelection"
+    <form ng-show="!showArSelection && !showSixPayLoader"
           class="modal-content form pay-bill"
           ng-class="{'select-card':showCCPage}">
 
