--- a/rover/partials/companyCard/rvArTransactionsPayCredits.html
+++ b/rover/partials/companyCard/rvArTransactionsPayCredits.html
@@ -1,5 +1,5 @@
 <div role="dialog" id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}" ng-click="clearErrorMessage()" ng-cloak>
-    <form ng-show="!shouldShowWaiting" method="post" action="pay-bill" id="pay-bill" name="pay-bill" class="modal-content form pay-bill"
+    <form ng-show="!showSixPayLoader" method="post" action="pay-bill" id="pay-bill" name="pay-bill" class="modal-content form pay-bill"
           ng-class="{'select-card':showCCPage}">
         <button id="modal-close" type="button" class="modal-close" ng-click="handleCloseDialog()"><span class="icons icon-close invert"></button>
         <div ng-include="'/assets/partials/common/notification_message.html'"></div>
@@ -23,10 +23,4 @@
             </snt-payment>
         </div>
     </form>
-    <div ng-show="shouldShowWaiting" class="modal-content modal-vertical-centered" style="position: relative;padding: 40px;text-align: center;">
-        <div class="centeralign alert-box">
-            WAITING FOR PAYMENT COMPLETION
-        </div>
-        <div class="waiting-payment">&nbsp;</div>
-    </div>
 </div>
