--- a/rover/partials/reservationCard/rvCancelReservation.html
+++ b/rover/partials/reservationCard/rvCancelReservation.html
@@ -1,5 +1,5 @@
 <div id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}" role="dialog" ng-click="clearErrorMessage()" ng-cloak>
-<form ng-show="!shouldShowWaiting" method="post" action="cancel-reservation" id="cancel-reservation" name="cancel-reservation" class="modal-content form cancel-reservation" ng-class="{'select-card':ngDialogData.state == 'PENALTY'}"><!-- Add class "select-card" when applying penalty charge -->
+<form ng-show="!showSixPayLoader" class="modal-content form cancel-reservation" ng-class="{'select-card':ngDialogData.state == 'PENALTY'}"><!-- Add class "select-card" when applying penalty charge -->
     <button class="modal-close" id="modal-close" type="button" ng-click="completeCancellationProcess()"><span class="icons icon-close invert"></span></button>
         <div ng-include="'/assets/partials/common/notification_message.html'"></div>   
     <!-- 1. Cancel Options screen -->
@@ -73,12 +73,6 @@
         </div>
     </fieldset>
 </form>
-<div ng-show="shouldShowWaiting" class="modal-content modal-vertical-centered" style="position: relative;padding: 40px;text-align: center;">
-	<div class="centeralign alert-box">
-		WAITING FOR PAYMENT COMPLETION 
-	</div>
-	<div class="waiting-payment">&nbsp;</div>
-</div>
 
 </div>
 <div ng-include="'/assets/partials/reservation/includes/rvCancellationPrintTemplate.html'"></div>
