CICO-29533 1. Changed the api url to correct 2. Added the notification message in ht,l 3. Fixed the issue of not displaying correctly (sort wise)

--- a/admin/partials/zestStation/adZestStationLanguageConfig.html
+++ b/admin/partials/zestStation/adZestStationLanguageConfig.html
@@ -5,6 +5,7 @@
     </header>
     <!-- list mode -->
     <section class="content-scroll">
+        <div ng-include="'/assets/partials/common/notification_message.html'"></div>
     	<div class=''>
 			Select the language and drag it to change the display order shown on the Zest Station home screen.
 		</div>
