CICO-34127 Scroll Broken in Reservation Summary Screen

--- a/rover/partials/reservation/rvSummaryAndConfirm.html
+++ b/rover/partials/reservation/rvSummaryAndConfirm.html
@@ -216,7 +216,7 @@
                 </ul>
             </div>
         </div>
-        <form class="form payment-info" ng-click="clearErrorMessage()">
+        <form class="form payment-info scrollable" ng-click="clearErrorMessage()" ng-iscroll='paymentInfo'>
             <div class="wrapper">
                 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
                 <div id="set-payment" class="payment-form for-reservation" ng-if="!!reservationData.reservationId">
